--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -25,8 +25,22 @@
   background-color: rgba(127, 255, 212, 0.3);
   border: thin solid black;
   border-radius: 1rem;
+  display: flex;
+  flex-flow: column wrap;
+  gap: 1rem;
   text-transform: capitalize;
   padding: 0.5rem;
+}
+
+.PokemonName {
+  border-bottom: thin solid black;
+}
+
+.TypesList {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 0.4rem;
 }
 
 .ItemTypes {
@@ -35,6 +49,5 @@
   color: white;
   font-size: 12px;
   text-transform: uppercase;
-  padding: 0.2rem;
-  margin: 0.2rem;
+  padding: 0.2rem 0.7rem;
 }
